--- a/css/main.css
+++ b/css/main.css
@@ -1,199 +1,234 @@
-*{
-    margin:0;
-    padding:0;
-}
-
 /* styles for parallax effect */
-body, html {
-    height: 100vh;
-    margin:0;
-    padding:0;
-    height: 100%;
-    background: #042029;
-    color: white;
-    scroll-behavior: smooth;
-}
-
 .parallax {
-    /* The image used */
-    background-image: url("../images/background.png");
-
-    /* Full height */
-    height: 100vh;
-
-    /* Create the parallax scrolling effect */
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-} 
-
-/* Turn off parallax scrolling for all tablets and phones. Increase/decrease the pixels if needed */
-@media only screen and (max-device-width: 1366px) {
+  /* The image used */
+  background-image: url("../images/background.png");
+  /* Full height */
+  min-height: 100%;
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+  @media only screen and (max-device-width: 1366px) {
     .parallax {
-        background-attachment: scroll;
-    }
-} 
-
-
-
-
-/* flex containers and children */
-.container {
-    width: 100%;
-    display: flex;
-}
-
-.container-small {
-    display: flex;
-}
-.small-center {
-    justify-content: center;
-    align-items: center;
-}
-
-.flex-center {
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-}
-
-.flex-upright {
-    position: absolute;
-    top:1rem;
-    right:1rem;
-    align-self: right;
-}
-
-.flex-bottom {
-    position:absolute;
-    bottom:0;
-}
-
-.flex-column {
-    flex-direction: column;
-}
-
-.flex-wrap {
-    flex-wrap: wrap;
-}
-
-.twoColumn {
-    justify-content: space-evenly;
-}
-.twoColumn-item {
-    width: 25%;
-}
-
-.flex-grid {
-    align-items: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-}
-
-.grid-item {
-    width: 30%;
-    color: white;
-    text-align: center;
-}
-
-
+      background-attachment: scroll; } }
 
 /* other custom styles */
 @font-face {
-    font-family: "philosopher";
-    src: url("../fonts/philosopher/philosopher_regular_macroman/philosopher-regular-webfont.woff");
-}
+  font-family: "philosopher";
+  src: url("../fonts/philosopher/philosopher_regular_macroman/philosopher-regular-webfont.woff"); }
 @font-face {
-    font-family: "comme";
-    src: url("../fonts/comme/comme_regular_macroman/comme-regular-webfont.woff");
-}
-@font-face {
-    font-family: "liberation";
-    src: url("../fonts/liberation/liberationsans_regular_macroman/LiberationSans-Regular-webfont.woff");
-}
+  font-family: "liberation";
+  src: url("../fonts/liberation/liberationsans_regular_macroman/LiberationSans-Regular-webfont.woff"); }
+body, html {
+  height: 100%;
+  background: #042029;
+  color: white;
+  scroll-behavior: smooth; }
+
 img {
-    max-width: 100%;
-}
-.plainLink {
-    text-decoration: none;
-    color: white;
-}
+  max-width: 100%; }
+
 h2 {
-    width: 100%;
-    font-family: "comme";
-    font-size: 2rem;
-    padding-top: 3rem;
-    margin-bottom: 2rem;
-}
-.pulldownDiv {
-    display: none;
-}
+  width: 100%;
+  font-family: "liberation";
+  font-size: 2rem;
+  padding-top: 3rem;
+  margin-bottom: 2rem; }
 
+.plainLink {
+  text-decoration: none;
+  color: white;
+  margin-bottom: 0; }
 
+.flag-position {
+  position: absolute;
+  top: 1rem;
+  right: 1rem; }
 
 /* section divisions */
-#doorMat {
-}
-#doorMat h1 {
-    font-family: "philosopher";
-    font-size: 4rem;
-    margin-bottom: 2rem;
-}
+#welcomeMat h1 {
+  font-family: "philosopher";
+  font-size: 4rem;
+  margin-bottom: 2rem; }
+
 .job_title {
-    font-family: "comme";
-    font-size: 3rem;
-}
+  font-family: "liberation";
+  font-size: 3rem; }
 
 #persInfo {
-    height: 100%;
-    background: black;
-    font-family: "liberation";
-    font-size: 1.5rem;
-}
-#persInfo p {
-    margin-bottom: 1rem;
-}
+  min-height: 100%;
+  background: black;
+  font-family: "liberation";
+  font-size: 1.5rem; }
+  #persInfo p {
+    margin-bottom: 1rem; }
+  #persInfo div {
+    height: 100%; }
 
 #projects {
-    background: #34495E;
-    text-align: center;
-}
+  min-height: 100%;
+  background: #34495E;
+  text-align: center; }
 
 #skills {
-    height: 100%;
-    text-align: center;
-    font-family: "liberation";
-    font-size: 2rem;
-}
+  min-height: 100%;
+  font-family: "liberation";
+  font-size: 2rem; }
+
 .pulldownParent {
-    margin-bottom: 3rem;
-}
-.pulldownParent h3:hover {
+  margin-bottom: 3rem; }
+  .pulldownParent h3:hover {
     text-decoration: underline;
-    cursor: pointer;
-}
-.pulldownDiv {
+    cursor: pointer; }
+  .pulldownParent .pulldownDiv {
+    display: none;
     background: #363636;
     border-radius: 25px;
     text-align: left;
-    padding-left: 1rem;
-}
-.pulldownDiv li {
-    list-style-position: inside;
-    padding-left: 2rem;
-}
+    padding-left: 1rem; }
+    .pulldownParent .pulldownDiv li {
+      list-style-position: inside;
+      padding-left: 2rem; }
 
 #contactMe {
+  min-height: 100%;
+  font-family: "liberation";
+  font-size: 2rem; }
+  #contactMe span {
+    margin-bottom: 4rem; }
+
+.portfolio-item {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  max-width: 530px;
+  margin: auto auto 1rem; }
+  .portfolio-item .caption {
+    display: flex;
     height: 100%;
-    text-align: center;
-    font-family: "liberation";
-    font-size: 2rem;
-}
-#contactMe span {
-    margin-bottom: 4rem;
-}
-#socialMedia {
-    width: 30%;
-    justify-content: space-between;
-}
+    width: 100%;
+    background-color: rgba(33, 37, 41, 0.2);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 1; }
+  .portfolio-item .caption-content {
+    opacity: 0;
+    color: #fff;
+    margin: auto 2rem 2rem; }
+  .portfolio-item h2 {
+    font-size: 0.8rem;
+    text-transform: uppercase; }
+  .portfolio-item p {
+    font-weight: 300;
+    font-size: 1.2rem; }
+  @media (min-width: 992px) {
+    .portfolio-item {
+      max-width: none;
+      margin: 0; }
+      .portfolio-item .caption {
+        -webkit-transition: -webkit-clip-path 0.25s ease-out, background-color 0.7s;
+        -webkit-clip-path: inset(0px);
+        clip-path: inset(0px); }
+        .portfolio-item .caption .caption-content {
+          transition: opacity 0.25s;
+          margin-left: 5rem;
+          margin-right: 5rem;
+          margin-bottom: 5rem; }
+      .portfolio-item img {
+        -webkit-transition: -webkit-clip-path 0.25s ease-out;
+        -webkit-clip-path: inset(-1px);
+        clip-path: inset(-1px); }
+      .portfolio-item:hover img {
+        -webkit-clip-path: inset(2rem);
+        clip-path: inset(2rem); }
+      .portfolio-item:hover .caption {
+        background-color: rgba(29, 128, 159, 0.9);
+        -webkit-clip-path: inset(2rem);
+        clip-path: inset(2rem); }
+      .portfolio-item:hover .caption-content {
+        opacity: 100; } }
+
+#sidebar-wrapper {
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  width: 250px;
+  height: 100%;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s;
+  transform: translateX(-250px);
+  background: #1D809F;
+  border-left: 1px solid rgba(255, 255, 255, 0.1); }
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none; }
+
+.sidebar-nav li.sidebar-nav-item a {
+  display: block;
+  text-decoration: none;
+  color: #fff;
+  padding: 15px; }
+
+.sidebar-nav li a:hover {
+  text-decoration: none;
+  color: #fff;
+  background: rgba(255, 255, 255, 0.2); }
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none; }
+
+.sidebar-nav > .sidebar-brand {
+  font-size: 1.2rem;
+  background: rgba(52, 58, 64, 0.1);
+  height: 80px;
+  line-height: 50px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 70px; }
+
+.sidebar-nav > .sidebar-brand a {
+  color: #fff; }
+
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none; }
+
+#sidebar-wrapper.active {
+  left: 250px;
+  width: 250px;
+  -webkit-transition: all 0.4s ease 0s;
+  -moz-transition: all 0.4s ease 0s;
+  -ms-transition: all 0.4s ease 0s;
+  -o-transition: all 0.4s ease 0s;
+  transition: all 0.4s ease 0s; }
+
+.menu-toggle {
+  position: fixed;
+  left: 15px;
+  top: 15px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  color: #fff;
+  background: rgba(52, 58, 64, 0.5);
+  line-height: 50px;
+  z-index: 999; }
+
+.menu-toggle:focus, .menu-toggle:hover {
+  color: #fff; }
+
+.menu-toggle:hover {
+  background: #343a40; }
+
+/*# sourceMappingURL=main.css.map */
